# s2-forest-browning-monitoring

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
src/forest_browning/: config.py  dataset.py  inference.py  mlp.py  rechunk_output.py  shuffle_train_data.py  train.py
src/forest_browning/data_processing/: 10_add_missingness.py  11_add_forest_mix_rate.py  12_merge_features.py  1_extract_swisstopo_dataset.py  2_transpose_swisstopo_dataset.py  3_add_dates.py  4_load_dem_2m.py  5_dem_2m_zarr_to_geotiff.py  6_create_dem_features.py  7_add_vegetation_height.py  8_add_tree_species.py  9_add_habitat.py  pipeline.py
